Fix disabled overflow colors (#4178)

--- a/packages/scss/src/components/calendar/states.scss
+++ b/packages/scss/src/components/calendar/states.scss
@@ -168,3 +168,9 @@
 		--components-calendar-table-body-row-cell-actionColor: var(--palettes-neutral-600);
 	}
 }
+
+@mixin disabled {
+	--components-calendar-table-body-row-cell-actionColor: var(--palettes-neutral-500);
+	--components-calendar-table-body-row-cell-actionTextDecoration: line-through;
+	--components-calendar-table-body-row-cell-actionCursor: default;
+}
